--- a/Landscape/build.gradle
+++ b/Landscape/build.gradle
@@ -25,6 +25,10 @@ compileTestJava {
     options.encoding('UTF-8')
 }
 
+springBoot {
+    buildInfo()
+}
+
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
@@ -39,6 +43,9 @@ dependencies {
     // implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-websocket:3.0.2'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'io.micrometer:micrometer-registry-prometheus:1.10.3'
     implementation 'org.flywaydb:flyway-core:9.10.1'
     implementation 'io.swagger.core.v3:swagger-annotations:2.2.6'
     compileOnly 'org.projectlombok:lombok'
