--- a/Handyman/build.gradle
+++ b/Handyman/build.gradle
@@ -43,11 +43,11 @@ dependencies {
     // implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'io.micrometer:micrometer-registry-prometheus:1.10.3'
     implementation 'org.flywaydb:flyway-core:9.10.1'
     implementation 'io.swagger.core.v3:swagger-annotations:2.2.6'
     compileOnly 'org.projectlombok:lombok'
-    compileOnly 'org.springframework.metrics:spring-metrics:0.5.1.RELEASE'
-    compileOnly 'io.prometheus:simpleclient_common:0.16.0'
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
