--- a/HandymanService/build.gradle
+++ b/HandymanService/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'org.springframework.boot' version '2.7.5'
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
     id 'java'
+    id 'com.google.protobuf' version "0.9.1"
 }
 
 group 'ru.tinkoff.academy'
@@ -17,18 +18,6 @@ repositories {
     mavenCentral()
 }
 
-springBoot {
-    buildInfo()
-}
-
-compileJava {
-    options.encoding('UTF-8')
-}
-
-compileTestJava {
-    options.encoding('UTF-8')
-}
-
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
@@ -40,19 +29,17 @@ ext {
 }
 
 dependencies {
-    // implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'io.micrometer:micrometer-registry-prometheus:1.10.3'
-    implementation 'org.flywaydb:flyway-core:9.10.1'
-    implementation 'io.swagger.core.v3:swagger-annotations:2.2.6'
+    implementation 'net.devh:grpc-server-spring-boot-starter:2.13.1.RELEASE'
+    implementation 'io.grpc:grpc-protobuf:1.52.1'
+    implementation 'io.grpc:grpc-stub:1.52.1'
     compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'org.postgresql:postgresql'
+    runtimeOnly 'io.grpc:grpc-netty-shaded:1.52.1'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.testcontainers:junit-jupiter'
-    testImplementation 'org.testcontainers:postgresql'
 }
 
 dependencyManagement {
@@ -61,6 +48,34 @@ dependencyManagement {
     }
 }
 
+compileJava {
+    options.encoding('UTF-8')
+}
+
+compileTestJava {
+    options.encoding('UTF-8')
+}
+
+springBoot {
+    buildInfo()
+}
+
 test {
     useJUnitPlatform()
+}
+
+protobuf {
+    protoc {
+        artifact = "com.google.protobuf:protoc:3.21.7"
+    }
+    plugins {
+        grpc {
+            artifact = 'io.grpc:protoc-gen-grpc-java:1.52.1'
+        }
+    }
+    generateProtoTasks {
+        all()*.plugins {
+            grpc {}
+        }
+    }
 }
