add gRPC client to LandscapeService, gRPC server to rancherService, made basic connection between services

--- a/LandscapeService/src/main/resources/application.yml
+++ b/LandscapeService/src/main/resources/application.yml
@@ -13,5 +13,9 @@ management:
         enabled: true
 grpc:
   client:
-    StatusService:
+    HandymanService:
       address: "static://localhost:9090"
+      negotiation-type: PLAINTEXT
+    RancherService:
+      address: "static://localhost:9091"
+      negotiation-type: PLAINTEXT
