add HW2 docs, finished gRPC client on LandscapeService

--- a/LandscapeService/src/main/resources/application.yml
+++ b/LandscapeService/src/main/resources/application.yml
@@ -14,8 +14,8 @@ management:
 grpc:
   client:
     HandymanService:
-      address: "static://localhost:9090"
+      address: "localhost:9090"
       negotiation-type: PLAINTEXT
     RancherService:
-      address: "static://localhost:9091"
+      address: "localhost:9091"
       negotiation-type: PLAINTEXT
