--- a/LandscapeService/Dockerfile
+++ b/LandscapeService/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /usr/LandscapeService/src
 RUN ./gradlew build
 
 FROM openjdk:17
-COPY --from=build /usr/LandscapeService/src/build/libs/*.jar /usr/vogorode/LanscapeService/LandscapeService.jar
+COPY --from=build /usr/LandscapeService/src/build/libs/*.jar /usr/vogorode/LandscapeService/LandscapeService.jar
 WORKDIR /usr/vogorode/LandscapeService
 EXPOSE 8082
-ENTRYPOINT ["java", "-jar", "./LandscapeService.jar"]
+ENTRYPOINT ["java", "-jar", "LandscapeService.jar"]
