--- a/HandymanService/src/main/resources/application.yml
+++ b/HandymanService/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: ${SERVER_PORT:8080}
 management:
   endpoints:
     web:
@@ -13,4 +13,4 @@ management:
         enabled: true
 grpc:
   server:
-    port: 9090
+    port: ${GRPC_SERVER_PORT:9090}
