--- a/RancherService/src/main/resources/application.yml
+++ b/RancherService/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8081
+  port: ${SERVER_PORT:8081}
 management:
   endpoints:
     web:
@@ -13,4 +13,4 @@ management:
         enabled: true
 grpc:
   server:
-    port: 9091
+    port: ${GRPC_SERVER_PORT:9091}
