--- a/dev/docker-compose.yaml
+++ b/dev/docker-compose.yaml
@@ -42,6 +42,8 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_DB: vogorode
       POSTGRES_PASSWORD: 123
+    volumes:
+      - ./postgres_data:/var/lib/postgresql/data
     expose: 
       - 5432
     ports:
