--- a/dev/docker/docker-compose.yaml
+++ b/dev/docker/docker-compose.yaml
@@ -6,34 +6,51 @@ networks:
 
 services:
   handyman-service:
-    build: ../HandymanService
+    build: handyman-service:latest
     container_name: handyman-service
     restart: always
+    environment:
+      POSTGRES_DB_URL: jdbc:postgresql://postgres:5432/vogorode
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 123
     ports:
       - 8080:8080
       - 9090:9090
     networks:
       - vogorode-network
+    depends_on:
+      - postgres
   rancher-service:
-    build: ../RancherService
+    build: rancher-service:latest
     container_name: rancher-service
     restart: always
+    environment:
+      POSTGRES_DB_URL: jdbc:postgresql://postgres:5432/vogorode
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 123
     ports:
       - 8081:8081
       - 9091:9091
     networks:
       - vogorode-network
+    depends_on:
+      - postgres
   landscape-service:
-    build: ../LandscapeService
+    build: landscape-service:latest
     container_name: landscape-service
     restart: always
     environment:
       HANDYMAN_GRPC_SERVER_ADDRESS: handyman-service:9090
       RANCHER_GRPC_SERVER_ADDRESS: rancher-service:9091
+      POSTGRES_DB_URL: jdbc:postgresql://postgres:5432/vogorode
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 123
     ports:
       - 8082:8082
     networks:
       - vogorode-network
+    depends_on:
+      - postgres
   postgres:
     image: postgres:15-alpine
     container_name: vogorode-postgres
@@ -43,7 +60,7 @@ services:
       POSTGRES_DB: vogorode
       POSTGRES_PASSWORD: 123
     volumes:
-      - ./postgres_data:/var/lib/postgresql/data
+      - ../postgres_data:/var/lib/postgresql/data
     expose: 
       - 5432
     ports:
