--- a/HandymanService/src/main/resources/application.yml
+++ b/HandymanService/src/main/resources/application.yml
@@ -14,3 +14,8 @@ management:
 grpc:
   server:
     port: ${GRPC_SERVER_PORT:9090}
+spring:
+  datasource:
+    url: ${POSTGRES_DB_URL:jdbc:postgresql://localhost:5432/vogorode}
+    username: ${POSTGRES_USER:postgres}
+    password: ${POSTGRES_PASSWORD:123}
