--- a/RancherService/build.gradle
+++ b/RancherService/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group 'ru.tinkoff.academy'
-version '1.2.0'
+version '1.3.0'
 
 java {
     toolchain {
@@ -34,6 +34,7 @@ dependencies {
     implementation 'io.micrometer:micrometer-registry-prometheus:1.10.3'
     implementation 'net.devh:grpc-spring-boot-starter:2.13.1.RELEASE'
     compileOnly 'org.projectlombok:lombok'
+    runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.testcontainers:junit-jupiter'
