fixed dockerbuild, add liquibase to landscape service

--- a/HandymanService/Dockerfile
+++ b/HandymanService/Dockerfile
@@ -1,7 +1,7 @@
 FROM openjdk:17 as build
 COPY ./ /usr/HandymanService/src
 WORKDIR /usr/HandymanService/src
-RUN ./gradlew build
+RUN ./gradlew build -x test
 
 FROM openjdk:17
 COPY --from=build /usr/HandymanService/src/build/libs/*.jar /usr/vogorode/HandymanService/HandymanService.jar
