--- a/LandscapeService/Dockerfile
+++ b/LandscapeService/Dockerfile
@@ -1,7 +1,7 @@
 FROM openjdk:17 as build
 COPY ./ /usr/LandscapeService/src
 WORKDIR /usr/LandscapeService/src
-RUN ./gradlew build
+RUN ./gradlew build -x test
 
 FROM openjdk:17
 COPY --from=build /usr/LandscapeService/src/build/libs/*.jar /usr/vogorode/LandscapeService/LandscapeService.jar
