--- a/LandscapeService/src/main/resources/application.yml
+++ b/LandscapeService/src/main/resources/application.yml
@@ -20,7 +20,10 @@ grpc:
       address: ${RANCHER_GRPC_SERVER_ADDRESS:localhost:9091}
       negotiation-type: PLAINTEXT
 spring:
+  liquibase:
+    enabled: true
+    change-log: classpath:db/changelog/db.changelog-master.yaml
   datasource:
-    url: ${POSTGRES_DB_URL:jdbc:postgresql://localhost:5432/vogorode}
+    url: ${POSTGRES_DB_URL:jdbc:postgresql://0.0.0.0:5432/vogorode}
     username: ${POSTGRES_USER:postgres}
     password: ${POSTGRES_PASSWORD:123}
