--- a/RancherService/Dockerfile
+++ b/RancherService/Dockerfile
@@ -1,7 +1,7 @@
 FROM openjdk:17 as build
 COPY ./ /usr/RancherService/src
 WORKDIR /usr/RancherService/src
-RUN ./gradlew build
+RUN ./gradlew build -x test
 
 FROM openjdk:17
 COPY --from=build /usr/RancherService/src/build/libs/*.jar /usr/vogorode/RancherService/RancherService.jar
