--- a/HandymanService/build.gradle
+++ b/HandymanService/build.gradle
@@ -29,10 +29,11 @@ ext {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'io.micrometer:micrometer-registry-prometheus:1.10.3'
     implementation 'net.devh:grpc-spring-boot-starter:2.13.1.RELEASE'
+    implementation 'io.micrometer:micrometer-registry-prometheus:1.10.3'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
