--- a/HandymanService/src/main/resources/application.yml
+++ b/HandymanService/src/main/resources/application.yml
@@ -15,7 +15,9 @@ grpc:
   server:
     port: ${GRPC_SERVER_PORT:9090}
 spring:
+  liquibase:
+    enabled: false
   datasource:
-    url: ${POSTGRES_DB_URL:jdbc:postgresql://localhost:5432/vogorode}
+    url: ${POSTGRES_DB_URL:jdbc:postgresql://0.0.0.0:5432/vogorode}
     username: ${POSTGRES_USER:postgres}
     password: ${POSTGRES_PASSWORD:123}
