--- a/LandscapeService/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/LandscapeService/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,11 +1,11 @@
 databaseChangeLog:
   - changeSet:
-      id: create_user_table
+      id: CREATE_users_TABLE
       author: o.kedrovskikh
       sqlFile:
-        path: classpath:db/changelog/first.sql
+        path: classpath:db/changelog/v4/CREATE_users_TABLE.sql
   - changeSet:
-      id: some_id
+      id: CREATE_user_types_ENUM_AND_REPLACE_u_type
       author: o.kedrovskikh
       sqlFile:
-        path: classpath:db/changelog/second.sql
+        path: classpath:db/changelog/v4/CREATE_user_types_ENUM_AND_REPLACE_u_type.sql
